--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
