--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_URL ="http://127.0.0.1:8000"
+VITE_API_URL=https://instrugate-system.onrender.com
+VITE_WS_URL=wss://instrugate-system.onrender.com
